[build-system]
requires = [
  "setuptools>=72", "hy"
]
build-backend = "setuptools.build_meta"

[project]
name = "bibvdb"
description = "Manage a vector database of bibliographic references"
authors = [
    {name = "Ati Sharma", email = "ati+bibvdb@agalmic.ltd"},
]
dynamic = ["version", "readme"]
requires-python = ">=3.11"
keywords = ["hy", "hylang"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "hyjinx",
    "hy-bibsearch>=1.0.2",
    "jaro-winkler",
    "fvdb",
    "tabulated"
]

[project.urls]
Repository = "https://github.com/atisharma/bibvdb"

[project.scripts]
bibvdb = "bibvdb.cli:cli"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "bibvdb.__version__"}

[tool.setuptools.package-data]
"*" = ["*.hy", "*.md", "*.json", "*.toml"]

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

